<resources>
    <string name="app_name">TestScanner</string>
    <string name="login_text">Login</string>
    <string name="edit_text_username">username</string>
    <string name="edit_text_password">password</string>
    <string name="button_sign_in">Login</string>
    <string name="button_sign_up">Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_username">enter username</string>
    <string name="enter_password">enter password</string>
    <string name="edit_text_password_confirm">confirm password</string>
    <string name="button_sign_up_activity">sign up</string>
    <string name="email_address">email address</string>
    <string name="password_login">Password</string>
    <string name="email_address_login">Email</string>
    <string name="username">Username</string>
    <string name="password_signup">Password</string>
    <string name="confirm_password_signup">Confirm Password</string>
    <string name="or_login">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="logo">logo</string>
    <string name="q_1_single_choice_question">Q.1 Single Choice</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">Hello Home Fragment</string>
    <string name="hello_results_fragment">Hello Results Fragment</string>
    <string name="demo_1">Demo 1</string>
    <string name="demo_2">Demo 2</string>
    <string name="demo_desc_1">Demo Desc 1</string>
    <string name="demo_desc_2">Demo Desc 2</string>
    <string name="title_activity_image_preview">ImagePreview</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_responses_yet">no Responses Yet</string>
</resources>